fix: change Java version to 1.8